--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "scripts": {
+    "test": "jest",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -8,12 +9,15 @@
     "demoExternalTest": "node external.test.js"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "selenium-webdriver": "^4.8.1"
+    "selenium-webdriver": "^4.13.0",
+    "webdriver-manager": "^12.1.9"
   },
   "devDependencies": {
-    "chromedriver": "^110.0.0"
+    "chai": "^4.3.10",
+    "chromedriver": "^117.0.3"
   }
 }
